--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<h1>Get Ready. There will be awesome</h1>
+<h1>Get Ready. It will be awesome</h1>
 </header>
 
 <footer>
