--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 <header>
-<h1>Get Ready. It will be awesome</h1>
+    <img class="logo" src="/img/surface_logo_text.svg" alt="logo surface">
+<h1 class="title"><span class="title_left">Be recruited</span> <span class="title_right">play college sports</span></h1>
 </header>
+<main>
 
+</main>
 <footer>
 
 </footer>
