--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <img class="logo" src="/img/surface_logo_text.svg" alt="logo surface">
+    <img class="logo" src="img/surface_logo_text.svg" alt="logo surface">
 <h1 class="title"><span class="title_left">Be recruited</span> <span class="title_right">play college sports</span></h1>
 </header>
 <main>
