--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Second Diploma</title>
 </head>
 <body>
-<header>
+<header class="header">
     <img class="logo" src="svg/surface_logo_text.svg" alt="logo surface">
 <h1 class="title"><span class="title_left">Be recruited</span> <span class="title_right">play college sports</span></h1>
 </header>
