--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <header class="header">
+    <div class="container">
     <svg class="logo" viewBox="0 0 972 264" xmlns="http://www.w3.org/2000/svg">
         <g fill-rule="nonzero">
             <g stroke-linecap="round" stroke-linejoin="round">
@@ -21,6 +22,7 @@
     </svg>
     <h1 class="title"><span class="title_left">Be recruited</span> <span class="title_right">play college sports</span>
     </h1>
+    </div>
 </header>
 <main>
 
