--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
             </g>
         </svg>
 <!--        текст заголовка-->
-        <h1 class="title">
+        <h1 class="title title_text">
             <span class="title_left">Be recruited</span>
             <span class="title_right">play college sports</span>
         </h1>
+        <button class="button" type="button">
+            <p class="button_text title_text">Download on the</p>
+            <p class="button_brand title_text">app store</p>
+        </button>
+        <button class="button" type="button">
+            <p class="button_text title_text">Get it on</p>
+            <p class="button_brand title_text">Google Play</p>
+        </button>
     </div>
 </header>
 <main>
