--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Second Diploma</title>
@@ -24,8 +24,9 @@
         </svg>
         <!--        текст заголовка-->
         <h1 class="title title_text">
-            <span class="title_left">Be recruited</span>
-            <span class="title_right">play college sports</span>
+            <span class="title_first">Be recruited</span>
+            <span class="title_second">play college</span>
+            <span class="title_third">sports</span>
         </h1>
 <!--        Кнопки-->
         <div class="buttons">
@@ -39,12 +40,60 @@
                 <svg class="button_brand_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 505.499 505.499">
                     <path d="M471.497 234.466l-92.082-53.135-75.733 73.208 69.215 66.907 98.6-56.91c5.43-3.133 8.677-8.756 8.677-15.03 0-6.275-3.245-11.898-8.677-15.04zM363.785 172.3l-101.332-58.497L40.375 0l250.828 242.47M44.063 505.5l218.77-120.512 94.435-54.515-66.065-63.87M25.56 9.815l-.236 489.67L278.72 254.534"/>
                 </svg>
-                <p class="button_text title_text">Download on the <span class="button_brand_text title_text">app store</span></p>
+                <p class="button_text title_text">Get it on<span class="button_brand_text title_text">Google Play</span></p>
             </a>
         </div>
     </div>
 </header>
 <main>
+    <section class="section_athletes">
+        <h2 class="section_title">
+            athletes
+        </h2>
+        <div class="image">
+            <img src="./img/footballer_192.png" alt="footballer">
+        </div>
+        <div class="connection">
+            <div class="sub_title">
+                <div class="sub_title_number">
+                    01
+                </div>
+                <h3 class="sub_title_text">
+                    connection
+                </h3>
+            </div>
+            <div class="common_text">
+                Connect with coaches directly, you can ping coaches to view profile.
+            </div>
+        </div>
+        <div class="collaboration">
+            <div class="sub_title">
+                <div class="sub_title_number">
+                    02
+                </div>
+                <h3 class="sub_title_text">
+                    collaboration
+                </h3>
+            </div>
+            <div class="common_text">
+                Work with other student athletes to  increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
+            </div>
+        </div>
+        <div class="growth_athletes">
+            <div class="sub_title">
+                <div class="sub_title_number_growth">
+                    03
+                </div>
+                <h3 class="sub_title_text">
+                    growth
+                </h3>
+            </div>
+            <div class="common_text_growth">
+                Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc
+            </div>
+        </div>
+
+    </section>
 
 </main>
 <footer>
