--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
         <!--        текст заголовка-->
         <h1 class="title title_text">
             <span class="title_first">Be recruited</span>
-            <span class="title_second">play college</span>
-            <span class="title_third">sports</span>
+            <span class="title_second">play college sports</span>
         </h1>
 <!--        Кнопки-->
         <div class="buttons">
-            <a class="button">
+            <a class="button" href="#">
                 <svg class="button_brand_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170">
                     <path d="M150.37 130.25c-2.45 5.66-5.35 10.87-8.71 15.66-4.58 6.53-8.33 11.05-11.22 13.56-4.48 4.12-9.28 6.23-14.42 6.35-3.69 0-8.14-1.05-13.32-3.18-5.197-2.12-9.973-3.17-14.34-3.17-4.58 0-9.492 1.05-14.746 3.17-5.262 2.13-9.5 3.24-12.742 3.35-4.93.21-9.842-1.96-14.746-6.52-3.13-2.73-7.045-7.41-11.735-14.04-5.03-7.08-9.168-15.29-12.41-24.65-3.47-10.11-5.21-19.9-5.21-29.378 0-10.857 2.346-20.22 7.045-28.068C27.508 57.03 32.42 52.06 38.57 48.41s12.793-5.51 19.948-5.63c3.915 0 9.05 1.21 15.43 3.59 6.36 2.39 10.446 3.6 12.237 3.6 1.34 0 5.877-1.416 13.57-4.24 7.275-2.617 13.415-3.7 18.445-3.274 13.63 1.1 23.87 6.473 30.68 16.153-12.19 7.385-18.22 17.73-18.1 31 .11 10.338 3.86 18.94 11.23 25.77 3.34 3.17 7.07 5.62 11.22 7.36-.9 2.61-1.85 5.11-2.86 7.51zM119.11 7.24c0 8.102-2.96 15.667-8.86 22.67-7.12 8.323-15.732 13.133-25.07 12.374-.12-.972-.19-1.995-.19-3.07 0-7.778 3.387-16.102 9.4-22.908 3.002-3.446 6.82-6.31 11.45-8.597 4.62-2.253 8.99-3.498 13.1-3.71.12 1.082.17 2.165.17 3.24z"/>
                 </svg>
                 <p class="button_text title_text">Download on the <span class="button_brand_text title_text">app store</span></p>
             </a>
-            <a class="button">
+            <a class="button" href="#">
                 <svg class="button_brand_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 505.499 505.499">
                     <path d="M471.497 234.466l-92.082-53.135-75.733 73.208 69.215 66.907 98.6-56.91c5.43-3.133 8.677-8.756 8.677-15.03 0-6.275-3.245-11.898-8.677-15.04zM363.785 172.3l-101.332-58.497L40.375 0l250.828 242.47M44.063 505.5l218.77-120.512 94.435-54.515-66.065-63.87M25.56 9.815l-.236 489.67L278.72 254.534"/>
                 </svg>
@@ -46,15 +45,15 @@
     </div>
 </header>
 <main>
-    <section class="section_athletes">
-        <h2 class="section_title">
-            athletes
+    <section class="section_ppl">
+        <h2 class="section_title title_text">
+            athlets
         </h2>
-        <div class="image">
-            <img src="./img/footballer_192.png" alt="footballer">
+        <div class="image_container">
+            <img class="image image_footballer" src="./img/footballer_192.png" alt="footballer">
         </div>
         <div class="connection">
-            <div class="sub_title">
+            <div class="sub_title first_sub_title title_text">
                 <div class="sub_title_number">
                     01
                 </div>
@@ -67,7 +66,7 @@
             </div>
         </div>
         <div class="collaboration">
-            <div class="sub_title">
+            <div class="sub_title title_text">
                 <div class="sub_title_number">
                     02
                 </div>
@@ -76,11 +75,11 @@
                 </h3>
             </div>
             <div class="common_text">
-                Work with other student athletes to  increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
+                Work with other student athletes to  increase visibility. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.
             </div>
         </div>
         <div class="growth_athletes">
-            <div class="sub_title">
+            <div class="sub_title title_text">
                 <div class="sub_title_number_growth">
                     03
                 </div>
@@ -88,13 +87,73 @@
                     growth
                 </h3>
             </div>
-            <div class="common_text_growth">
+            <div class="common_text text_growth">
                 Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc
             </div>
         </div>
-
     </section>
-
+    <section class="section_ppl">
+        <h2 class="section_title title_text">
+            players
+        </h2>
+        <div class="image_container">
+            <img class="image" src="./img/basketballer_302.png" alt="basketballer">
+        </div>
+        <div class="connection">
+            <div class="sub_title first_sub_title title_text">
+                <div class="sub_title_number">
+                    01
+                </div>
+                <h3 class="sub_title_text">
+                    connection
+                </h3>
+            </div>
+            <div class="common_text">
+                Connect with talented athlete directly, you can watch their skills through video showreels directly from Surface 1.
+            </div>
+        </div>
+        <div class="collaboration">
+            <div class="sub_title title_text">
+                <div class="sub_title_number">
+                    02
+                </div>
+                <h3 class="sub_title_text">
+                    collaboration
+                </h3>
+            </div>
+            <div class="common_text">
+                Work with recruiter to increase your chances of finding talented athlete.
+            </div>
+        </div>
+        <div class="growth_players">
+            <div class="sub_title title_text">
+                <div class="sub_title_number_growth">
+                    03
+                </div>
+                <h3 class="sub_title_text">
+                    growth
+                </h3>
+            </div>
+            <div class="common_text text_growth">
+                Save your time, recruit proper athlets for your team.
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="image_container">
+            <img class="image_action" src="./img/be-active_640.jpg" alt="man with phone">
+        </div>
+            <div class="sub_title_action_number">
+                <span class="span_sub_title_action_number title_text">01</span>
+            </div>
+            <div class="sub_title_action_text title_text">
+                be active
+            </div>
+        <div class="common_text_action">
+            <p>Post videos with your skills,</p>
+            <p>Like and follow others to be more popular.</p>
+        </div>
+    </section>
 </main>
 <footer>
 
